# downup-speed

./: .gitignore  Cargo.toml  Dockerfile  README.md  client.toml  docker-compose.yaml  server.toml
client/: Cargo.toml  Dockerfile
client/src/: lib.rs  stream.rs
client/tests/: lib_test.rs
go-server/: go.mod  main.go
server/: Cargo.toml  Dockerfile
server/src/: lib.rs  stream.rs  tcp.rs  udp.rs
src/: client.rs  mod.rs  server.rs  stream.rs  tcp.rs  udp.rs  utils.rs
tests/: lib_test.rs
