[package]
name = "downup"
version = "0.1.0"
authors = ["Hossein Daneshvar <daneshvar.ho@gmail.com>"]
edition = "2018"
description = "A short description of my package"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
license = "MIT OR Apache-2.0"
repository = "https://github.com/daneshvar/downup-speed/"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
elapsed = "0.1"
bytesize = "1.0.0"
